Change PDF locations.

--- a/_posts/2016-02-25-Kaban15b.md
+++ b/_posts/2016-02-25-Kaban15b.md
@@ -40,6 +40,6 @@ issued:
   - 2016
   - 2
   - 25
-pdf: http://proceedings.mlr.press/v45/Kaban15b/Kaban15b.pdf
+pdf: http://proceedings.mlr.press/v45/Kaban15b.pdf
 # Format based on citeproc: http://blog.martinfenner.org/2013/07/30/citeproc-yaml-for-bibliographies/
 ---
