--- a/_posts/2016-02-25-Antoniuk15.md
+++ b/_posts/2016-02-25-Antoniuk15.md
@@ -36,6 +36,6 @@ issued:
   - 2016
   - 2
   - 25
-pdf: http://proceedings.mlr.press/v45/Antoniuk15/Antoniuk15.pdf
+pdf: http://proceedings.mlr.press/v45/Antoniuk15.pdf
 # Format based on citeproc: http://blog.martinfenner.org/2013/07/30/citeproc-yaml-for-bibliographies/
 ---
