--- a/_posts/2016-02-25-Kaban15a.md
+++ b/_posts/2016-02-25-Kaban15a.md
@@ -32,6 +32,6 @@ issued:
   - 2016
   - 2
   - 25
-pdf: http://proceedings.mlr.press/v45/Kaban15a/Kaban15a.pdf
+pdf: http://proceedings.mlr.press/v45/Kaban15a.pdf
 # Format based on citeproc: http://blog.martinfenner.org/2013/07/30/citeproc-yaml-for-bibliographies/
 ---
