--- a/_posts/2016-02-25-Li15.md
+++ b/_posts/2016-02-25-Li15.md
@@ -46,6 +46,6 @@ issued:
   - 2016
   - 2
   - 25
-pdf: http://proceedings.mlr.press/v45/Li15/Li15.pdf
+pdf: http://proceedings.mlr.press/v45/Li15.pdf
 # Format based on citeproc: http://blog.martinfenner.org/2013/07/30/citeproc-yaml-for-bibliographies/
 ---
