--- a/_posts/2016-02-25-Zhang15b.md
+++ b/_posts/2016-02-25-Zhang15b.md
@@ -44,6 +44,6 @@ issued:
   - 2016
   - 2
   - 25
-pdf: http://proceedings.mlr.press/v45/Zhang15b/Zhang15b.pdf
+pdf: http://proceedings.mlr.press/v45/Zhang15b.pdf
 # Format based on citeproc: http://blog.martinfenner.org/2013/07/30/citeproc-yaml-for-bibliographies/
 ---
