--- a/_posts/2016-02-25-preface.md
+++ b/_posts/2016-02-25-preface.md
@@ -26,6 +26,6 @@ issued:
   - 2016
   - 2
   - 25
-pdf: http://proceedings.mlr.press/v45/preface/preface.pdf
+pdf: http://proceedings.mlr.press/v45/preface.pdf
 # Format based on citeproc: http://blog.martinfenner.org/2013/07/30/citeproc-yaml-for-bibliographies/
 ---
