Update styles, headers, _config.yml

--- a/_posts/2016-02-25-Antoniuk15.md
+++ b/_posts/2016-02-25-Antoniuk15.md
@@ -14,6 +14,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Antoniuk15
 month: 0
+tex_title: Consistency of structured output learning with missing labels
 firstpage: 81
 lastpage: 95
 page: 81-95
