--- a/_posts/2016-02-25-Bao15.md
+++ b/_posts/2016-02-25-Bao15.md
@@ -17,6 +17,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Bao15
 month: 0
+tex_title: Data-Guided Approach for Learning and Improving User Experience in Computer
+  Networks
 firstpage: 127
 lastpage: 142
 page: 127-142
