--- a/_posts/2016-02-25-Cheung15.md
+++ b/_posts/2016-02-25-Cheung15.md
@@ -17,6 +17,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Cheung15
 month: 0
+tex_title: "Proximal Average Approximated Incremental Gradient Method for Composite
+  Penalty Regularized Empirical Risk Minimization\x03"
 firstpage: 205
 lastpage: 220
 page: 205-220
