--- a/_posts/2016-02-25-Dai15.md
+++ b/_posts/2016-02-25-Dai15.md
@@ -18,6 +18,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Dai15
 month: 0
+tex_title: Statistical Unfolded Logic Learning
 firstpage: 349
 lastpage: 361
 page: 349-361
