--- a/_posts/2016-02-25-Horev15.md
+++ b/_posts/2016-02-25-Horev15.md
@@ -19,6 +19,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Horev15
 month: 0
+tex_title: Geometry-Aware Principal Component Analysis for Symmetric Positive Definite
+  Matrices
 firstpage: 1
 lastpage: 16
 page: 1-16
