--- a/_posts/2016-02-25-Irsoy15.md
+++ b/_posts/2016-02-25-Irsoy15.md
@@ -16,6 +16,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Irsoy15
 month: 0
+tex_title: Autoencoder Trees
 firstpage: 378
 lastpage: 390
 page: 378-390
