--- a/_posts/2016-02-25-Kaban15a.md
+++ b/_posts/2016-02-25-Kaban15a.md
@@ -14,6 +14,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Kaban15a
 month: 0
+tex_title: Non-asymptotic Analysis of Compressive Fisher Discriminants in terms of
+  the Effective Dimension
 firstpage: 17
 lastpage: 32
 page: 17-32
