--- a/_posts/2016-02-25-Kotlowski15.md
+++ b/_posts/2016-02-25-Kotlowski15.md
@@ -18,6 +18,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Kotlowski15
 month: 0
+tex_title: Surrogate regret bounds for generalized classification performance metrics
 firstpage: 301
 lastpage: 316
 page: 301-316
