--- a/_posts/2016-02-25-Liu15.md
+++ b/_posts/2016-02-25-Liu15.md
@@ -19,6 +19,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Liu15
 month: 0
+tex_title: Preference Relation-based Markov Random Fields for Recommender Systems
 firstpage: 157
 lastpage: 172
 page: 157-172
