--- a/_posts/2016-02-25-Nguyen15.md
+++ b/_posts/2016-02-25-Nguyen15.md
@@ -22,6 +22,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Nguyen15
 month: 0
+tex_title: Continuous Target Shift Adaptation in Supervised Learning
 firstpage: 285
 lastpage: 300
 page: 285-300
