--- a/_posts/2016-02-25-Niu15.md
+++ b/_posts/2016-02-25-Niu15.md
@@ -17,6 +17,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Niu15
 month: 0
+tex_title: A Unified Framework for Jointly Learning Distributed Representations of
+  Word and Attributes
 firstpage: 143
 lastpage: 156
 page: 143-156
