--- a/_posts/2016-02-25-Sankar15.md
+++ b/_posts/2016-02-25-Sankar15.md
@@ -19,6 +19,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Sankar15
 month: 0
+tex_title: Similarity-based Contrastive Divergence Methods for Energy-based Deep Learning
+  Models
 firstpage: 391
 lastpage: 406
 page: 391-406
