--- a/_posts/2016-02-25-Shu15.md
+++ b/_posts/2016-02-25-Shu15.md
@@ -20,6 +20,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Shu15
 month: 0
+tex_title: Integration of Single-view Graphs with Diffusion of Tensor Product Graphs
+  for Multi-view Spectral Clustering
 firstpage: 362
 lastpage: 377
 page: 362-377
