--- a/_posts/2016-02-25-Xia15.md
+++ b/_posts/2016-02-25-Xia15.md
@@ -13,6 +13,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Xia15
 month: 0
+tex_title: Budgeted Bandit Problems with Continuous Random Costs
 firstpage: 317
 lastpage: 332
 page: 317-332
