--- a/_posts/2016-02-25-Zhang15a.md
+++ b/_posts/2016-02-25-Zhang15a.md
@@ -18,6 +18,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Zhang15a
 month: 0
+tex_title: Robust Multivariate Regression with Grossly Corrupted Observations and
+  Its Application to Personality Prediction
 firstpage: 112
 lastpage: 126
 page: 112-126
