--- a/_posts/2016-02-25-Zhang15b.md
+++ b/_posts/2016-02-25-Zhang15b.md
@@ -20,6 +20,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Zhang15b
 month: 0
+tex_title: Improving Sybil Detection via Graph Pruning and Regularization Techniques
 firstpage: 189
 lastpage: 204
 page: 189-204
