--- a/_posts/2016-02-25-Zhao15b.md
+++ b/_posts/2016-02-25-Zhao15b.md
@@ -14,6 +14,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Zhao15b
 month: 0
+tex_title: 'Regularized Policy Gradients: Direct Variance Reduction in Policy Gradient
+  Estimation'
 firstpage: 333
 lastpage: 348
 page: 333-348
