--- a/_posts/2016-02-25-Zhou15.md
+++ b/_posts/2016-02-25-Zhou15.md
@@ -13,6 +13,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Zhou15
 month: 0
+tex_title: Largest Source Subset Selection for Instance Transfer
 firstpage: 423
 lastpage: 438
 page: 423-438
