--- a/_posts/2016-02-25-Huynh15.md
+++ b/_posts/2016-02-25-Huynh15.md
@@ -14,6 +14,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Huynh15
 month: 0
+tex_title: Streaming Variational Inference for Dirichlet Process Mixtures
 firstpage: 237
 lastpage: 252
 page: 237-252
