--- a/_posts/2016-02-25-Kaban15b.md
+++ b/_posts/2016-02-25-Kaban15b.md
@@ -22,6 +22,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Kaban15b
 month: 0
+tex_title: 'A New Look at Nearest Neighbours: Identifying Benign Input Geometries
+  via Random Projections'
 firstpage: 65
 lastpage: 80
 page: 65-80
