--- a/_posts/2016-02-25-Ko15.md
+++ b/_posts/2016-02-25-Ko15.md
@@ -15,6 +15,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Ko15
 month: 0
+tex_title: Expectation Propagation for Rectified Linear Poisson Regression
 firstpage: 253
 lastpage: 268
 page: 253-268
