--- a/_posts/2016-02-25-Kondo15.md
+++ b/_posts/2016-02-25-Kondo15.md
@@ -17,6 +17,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Kondo15
 month: 0
+tex_title: 'Bayesian Masking: Sparse Bayesian Estimation with Weaker Shrinkage Bias'
 firstpage: 49
 lastpage: 64
 page: 49-64
