--- a/_posts/2016-02-25-Li15.md
+++ b/_posts/2016-02-25-Li15.md
@@ -22,6 +22,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Li15
 month: 0
+tex_title: 'Detecting Accounting Frauds in Publicly Traded U.S. Firms: A Machine Learning
+  Approach'
 firstpage: 173
 lastpage: 188
 page: 173-188
