--- a/_posts/2016-02-25-Sasaki15.md
+++ b/_posts/2016-02-25-Sasaki15.md
@@ -21,6 +21,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Sasaki15
 month: 0
+tex_title: Sufficient Dimension Reduction via Direct Estimation of the Gradients of
+  Logarithmic Conditional Densities
 firstpage: 33
 lastpage: 48
 page: 33-48
