--- a/_posts/2016-02-25-Yu15.md
+++ b/_posts/2016-02-25-Yu15.md
@@ -20,6 +20,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Yu15
 month: 0
+tex_title: Maximum Margin Partial Label Learning
 firstpage: 96
 lastpage: 111
 page: 96-111
