--- a/_posts/2016-02-25-Zhao15a.md
+++ b/_posts/2016-02-25-Zhao15a.md
@@ -14,6 +14,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Zhao15a
 month: 0
+tex_title: Curriculum Learning of Bayesian Network Structures
 firstpage: 269
 lastpage: 284
 page: 269-284
