--- a/_posts/2016-02-25-Zhu15.md
+++ b/_posts/2016-02-25-Zhu15.md
@@ -17,6 +17,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: Zhu15
 month: 0
+tex_title: One-Pass Multi-View Learning
 firstpage: 407
 lastpage: 422
 page: 407-422
