Add supplementary material and multiple cycles with issues.

--- a/_posts/2016-02-25-Antoniuk15.md
+++ b/_posts/2016-02-25-Antoniuk15.md
@@ -18,7 +18,8 @@ tex_title: Consistency of structured output learning with missing labels
 firstpage: 81
 lastpage: 95
 page: 81-95
-sections: 
+order: 81
+cycles: false
 author:
 - given: Kostiantyn
   family: Antoniuk
