--- a/_posts/2016-02-25-Bao15.md
+++ b/_posts/2016-02-25-Bao15.md
@@ -22,7 +22,8 @@ tex_title: Data-Guided Approach for Learning and Improving User Experience in Co
 firstpage: 127
 lastpage: 142
 page: 127-142
-sections: 
+order: 127
+cycles: false
 author:
 - given: Yanan
   family: Bao
