--- a/_posts/2016-02-25-Cheung15.md
+++ b/_posts/2016-02-25-Cheung15.md
@@ -22,7 +22,8 @@ tex_title: "Proximal Average Approximated Incremental Gradient Method for Compos
 firstpage: 205
 lastpage: 220
 page: 205-220
-sections: 
+order: 205
+cycles: false
 author:
 - given: Yiu-ming
   family: Cheung
