--- a/_posts/2016-02-25-Dai15.md
+++ b/_posts/2016-02-25-Dai15.md
@@ -22,7 +22,8 @@ tex_title: Statistical Unfolded Logic Learning
 firstpage: 349
 lastpage: 361
 page: 349-361
-sections: 
+order: 349
+cycles: false
 author:
 - given: Wang-Zhou
   family: Dai
