--- a/_posts/2016-02-25-Horev15.md
+++ b/_posts/2016-02-25-Horev15.md
@@ -24,7 +24,8 @@ tex_title: Geometry-Aware Principal Component Analysis for Symmetric Positive De
 firstpage: 1
 lastpage: 16
 page: 1-16
-sections: 
+order: 1
+cycles: false
 author:
 - given: Inbal
   family: Horev
