--- a/_posts/2016-02-25-Huynh15.md
+++ b/_posts/2016-02-25-Huynh15.md
@@ -18,7 +18,8 @@ tex_title: Streaming Variational Inference for Dirichlet Process Mixtures
 firstpage: 237
 lastpage: 252
 page: 237-252
-sections: 
+order: 237
+cycles: false
 author:
 - given: Viet
   family: Huynh
