--- a/_posts/2016-02-25-Kaban15a.md
+++ b/_posts/2016-02-25-Kaban15a.md
@@ -19,7 +19,8 @@ tex_title: Non-asymptotic Analysis of Compressive Fisher Discriminants in terms 
 firstpage: 17
 lastpage: 32
 page: 17-32
-sections: 
+order: 17
+cycles: false
 author:
 - given: Ata
   family: Kaban
