--- a/_posts/2016-02-25-Kaban15b.md
+++ b/_posts/2016-02-25-Kaban15b.md
@@ -27,7 +27,8 @@ tex_title: 'A New Look at Nearest Neighbours: Identifying Benign Input Geometrie
 firstpage: 65
 lastpage: 80
 page: 65-80
-sections: 
+order: 65
+cycles: false
 author:
 - given: Ata
   family: Kaban
