--- a/_posts/2016-02-25-Ko15.md
+++ b/_posts/2016-02-25-Ko15.md
@@ -19,7 +19,8 @@ tex_title: Expectation Propagation for Rectified Linear Poisson Regression
 firstpage: 253
 lastpage: 268
 page: 253-268
-sections: 
+order: 253
+cycles: false
 author:
 - given: Young-Jun
   family: Ko
