--- a/_posts/2016-02-25-Kondo15.md
+++ b/_posts/2016-02-25-Kondo15.md
@@ -21,7 +21,8 @@ tex_title: 'Bayesian Masking: Sparse Bayesian Estimation with Weaker Shrinkage B
 firstpage: 49
 lastpage: 64
 page: 49-64
-sections: 
+order: 49
+cycles: false
 author:
 - given: Yohei
   family: Kondo
