--- a/_posts/2016-02-25-Kotlowski15.md
+++ b/_posts/2016-02-25-Kotlowski15.md
@@ -22,7 +22,8 @@ tex_title: Surrogate regret bounds for generalized classification performance me
 firstpage: 301
 lastpage: 316
 page: 301-316
-sections: 
+order: 301
+cycles: false
 author:
 - given: Wojciech
   family: Kotlowski
