--- a/_posts/2016-02-25-Li15.md
+++ b/_posts/2016-02-25-Li15.md
@@ -27,7 +27,8 @@ tex_title: 'Detecting Accounting Frauds in Publicly Traded U.S. Firms: A Machine
 firstpage: 173
 lastpage: 188
 page: 173-188
-sections: 
+order: 173
+cycles: false
 author:
 - given: Bin
   family: Li
