--- a/_posts/2016-02-25-Liu15.md
+++ b/_posts/2016-02-25-Liu15.md
@@ -23,7 +23,8 @@ tex_title: Preference Relation-based Markov Random Fields for Recommender System
 firstpage: 157
 lastpage: 172
 page: 157-172
-sections: 
+order: 157
+cycles: false
 author:
 - given: Shaowu
   family: Liu
