--- a/_posts/2016-02-25-Nguyen15.md
+++ b/_posts/2016-02-25-Nguyen15.md
@@ -26,7 +26,8 @@ tex_title: Continuous Target Shift Adaptation in Supervised Learning
 firstpage: 285
 lastpage: 300
 page: 285-300
-sections: 
+order: 285
+cycles: false
 author:
 - given: Tuan Duong
   family: Nguyen
