--- a/_posts/2016-02-25-Niu15.md
+++ b/_posts/2016-02-25-Niu15.md
@@ -22,7 +22,8 @@ tex_title: A Unified Framework for Jointly Learning Distributed Representations 
 firstpage: 143
 lastpage: 156
 page: 143-156
-sections: 
+order: 143
+cycles: false
 author:
 - given: Liqiang
   family: Niu
