--- a/_posts/2016-02-25-Sankar15.md
+++ b/_posts/2016-02-25-Sankar15.md
@@ -24,7 +24,8 @@ tex_title: Similarity-based Contrastive Divergence Methods for Energy-based Deep
 firstpage: 391
 lastpage: 406
 page: 391-406
-sections: 
+order: 391
+cycles: false
 author:
 - given: Adepu Ravi
   family: Sankar
