--- a/_posts/2016-02-25-Sasaki15.md
+++ b/_posts/2016-02-25-Sasaki15.md
@@ -26,7 +26,8 @@ tex_title: Sufficient Dimension Reduction via Direct Estimation of the Gradients
 firstpage: 33
 lastpage: 48
 page: 33-48
-sections: 
+order: 33
+cycles: false
 author:
 - given: Hiroaki
   family: Sasaki
