--- a/_posts/2016-02-25-Shu15.md
+++ b/_posts/2016-02-25-Shu15.md
@@ -25,7 +25,8 @@ tex_title: Integration of Single-view Graphs with Diffusion of Tensor Product Gr
 firstpage: 362
 lastpage: 377
 page: 362-377
-sections: 
+order: 362
+cycles: false
 author:
 - given: Le
   family: Shu
