--- a/_posts/2016-02-25-Yu15.md
+++ b/_posts/2016-02-25-Yu15.md
@@ -24,7 +24,8 @@ tex_title: Maximum Margin Partial Label Learning
 firstpage: 96
 lastpage: 111
 page: 96-111
-sections: 
+order: 96
+cycles: false
 author:
 - given: Fei
   family: Yu
