--- a/_posts/2016-02-25-Zhang15a.md
+++ b/_posts/2016-02-25-Zhang15a.md
@@ -23,7 +23,8 @@ tex_title: Robust Multivariate Regression with Grossly Corrupted Observations an
 firstpage: 112
 lastpage: 126
 page: 112-126
-sections: 
+order: 112
+cycles: false
 author:
 - given: Xiaowei
   family: Zhang
