--- a/_posts/2016-02-25-Zhang15b.md
+++ b/_posts/2016-02-25-Zhang15b.md
@@ -24,7 +24,8 @@ tex_title: Improving Sybil Detection via Graph Pruning and Regularization Techni
 firstpage: 189
 lastpage: 204
 page: 189-204
-sections: 
+order: 189
+cycles: false
 author:
 - given: Huanhuan
   family: Zhang
