--- a/_posts/2016-02-25-Zhao15a.md
+++ b/_posts/2016-02-25-Zhao15a.md
@@ -18,7 +18,8 @@ tex_title: Curriculum Learning of Bayesian Network Structures
 firstpage: 269
 lastpage: 284
 page: 269-284
-sections: 
+order: 269
+cycles: false
 author:
 - given: Yanpeng
   family: Zhao
