--- a/_posts/2016-02-25-Zhao15b.md
+++ b/_posts/2016-02-25-Zhao15b.md
@@ -19,7 +19,8 @@ tex_title: 'Regularized Policy Gradients: Direct Variance Reduction in Policy Gr
 firstpage: 333
 lastpage: 348
 page: 333-348
-sections: 
+order: 333
+cycles: false
 author:
 - given: Tingting
   family: Zhao
