--- a/_posts/2016-02-25-Zhou15.md
+++ b/_posts/2016-02-25-Zhou15.md
@@ -17,7 +17,8 @@ tex_title: Largest Source Subset Selection for Instance Transfer
 firstpage: 423
 lastpage: 438
 page: 423-438
-sections: 
+order: 423
+cycles: false
 author:
 - given: Shuang
   family: Zhou
