--- a/_posts/2016-02-25-Zhu15.md
+++ b/_posts/2016-02-25-Zhu15.md
@@ -21,7 +21,8 @@ tex_title: One-Pass Multi-View Learning
 firstpage: 407
 lastpage: 422
 page: 407-422
-sections: 
+order: 407
+cycles: false
 author:
 - given: Yue
   family: Zhu
