--- a/_posts/2016-02-25-preface.md
+++ b/_posts/2016-02-25-preface.md
@@ -10,7 +10,8 @@ tex_title: Preface
 firstpage: i
 lastpage: xx
 page: i-xx
-sections: 
+order: 0
+cycles: false
 author:
 - given: Geoffrey
   family: Holmes
