--- a/_posts/2016-02-25-Irsoy15.md
+++ b/_posts/2016-02-25-Irsoy15.md
@@ -20,7 +20,8 @@ tex_title: Autoencoder Trees
 firstpage: 378
 lastpage: 390
 page: 378-390
-sections: 
+order: 378
+cycles: false
 author:
 - given: Ozan
   family: Irsoy
