--- a/_posts/2016-02-25-Xia15.md
+++ b/_posts/2016-02-25-Xia15.md
@@ -17,7 +17,8 @@ tex_title: Budgeted Bandit Problems with Continuous Random Costs
 firstpage: 317
 lastpage: 332
 page: 317-332
-sections: 
+order: 317
+cycles: false
 author:
 - given: Yingce
   family: Xia
